[EFL] Fix the minibrowser after r185725 https://bugs.webkit.org/show_bug.cgi?id=146135

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-06-19
Reviewed by Gyuyoung Kim.

Removed the HAVE_ECORE_X guard in MiniBrowser because it is an unnecessary guard
for the elm_config_accel_preference_set() to set the config of acceleration preference.

* MiniBrowser/efl/main.c:
(elm_main): Deleted the HAVE_ECORE_X guard.

Canonical link: https://commits.webkit.org/164183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185740 268f45cc-cd09-0410-ab3c-d52691b4dbfc