Tools/MiniBrowser/efl/main.c
@@ -2437,12 +2437,10 @@ elm_main(int argc, char *argv[])
 
     if (evas_engine_name)
         elm_config_accel_preference_set(evas_engine_name);
-#if defined(HAVE_ECORE_X)
     else {
         evas_engine_name = "opengl";
         elm_config_accel_preference_set(evas_engine_name);
     }
-#endif
 
     Ewk_Context *context = ewk_context_default_get();
 
